Fixe le script d'importation d'annonces

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,7 +43,7 @@
         <div class="row mb-5">
             <div class="col-md">
                 <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">PubAuto</h2>
+                    <h2 class="ftco-heading-2">Autoflux</h2>
                     <p class="text-dark">Pubauto est un site d'annonces publiant les annonces de partenaires</p>
                 </div>
             </div>
